--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,15 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#EA1D2C</color>
+
+             <!--Segunda cor-->
+
+    <color name="primaryColor">#607d8b</color>
+    <color name="primaryLightColor">#8eacbb</color>
+    <color name="primaryDarkColor">#34515e</color>
+    <color name="secondaryColor">#f3e5f5</color>
+    <color name="secondaryLightColor">#ffffff</color>
+    <color name="secondaryDarkColor">#c0b3c2</color>
+    <color name="primaryTextColor">#fafafa</color>
+    <color name="secondaryTextColor">#424242</color>
 </resources>
