--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
+    android:padding="17dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,13 +15,13 @@
         android:text="@string/Calculadora"
         android:textAlignment="center"
         android:textColor="@color/primaryDarkColor"
-        android:textSize="35dp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintVertical_bias="0.007" />
 
     <EditText
         android:id="@+id/Insert"
@@ -33,7 +33,7 @@
         android:hint="@string/Insirir"
         android:inputType="numberDecimal"
         android:textAlignment="center"
-        android:textSize="18dp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
@@ -43,16 +43,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="92dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif-black"
         android:hint="@string/outro"
         android:inputType="numberDecimal"
         android:textAlignment="center"
-        android:textSize="18dp"
+        android:textSize="16dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/Insert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Insert"
-        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
     <RadioGroup
@@ -74,7 +73,6 @@
             android:layout_margin="0dp"
             android:layout_marginTop="172dp"
             android:fontFamily="sans-serif-black"
-            android:onClick="calculate"
             android:text="@string/Soma"
             android:textColor="@color/primaryDarkColor"
             android:textSize="20dp"
@@ -122,9 +120,9 @@
 
     <Button
         android:id="@+id/calculate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_width="200dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="40dp"
         android:text="@string/calcular"
         android:textColor="@color/white"
         android:textSize="20dp"
